--- a/grades.html
+++ b/grades.html
@@ -1,4 +1,4 @@
-Rabe33, [6/29/2025 7:26 AM]
+Rabe33, [6/29/2025 7:41 AM]
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,8 +30,11 @@ Rabe33, [6/29/2025 7:26 AM]
       color: #003366;
     }
     td.subject {
-      color: #d9534f; /* أحمر فاتح */
+      color: #d9534f;
       font-weight: bold;
+    }
+    th:nth-child(5), td:nth-child(5) {
+      width: 40%;
     }
   </style>
 </head>
@@ -43,47 +46,48 @@ Rabe33, [6/29/2025 7:26 AM]
       <th>Credits</th>
       <th>Year</th>
       <th>Semester</th>
+      <th>Semester Number</th>
       <th>Type</th>
       <th>Grade</th>
     </tr>
 
     <!-- Semester 1 -->
-    <tr><td class="subject">General histology, with cytology</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td><td>87</td></tr>
-    <tr><td class="subject">Basics of philosophy</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>University optional</td><td>84</td></tr>
-    <tr><td class="subject">Foreign language - 1 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>University mandatory</td><td>82</td></tr>
-    <tr><td class="subject">Human normal anatomy (locomotor and internal organs anatomy)</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td><td>85</td></tr>
-    <tr><td class="subject">Introduction of biochemistry</td><td>4.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td><td>80</td></tr>
-    <tr><td class="subject">Medical biology</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>Faculty mandatory</td><td>86</td></tr>
-    <tr><td class="subject">Biophysics</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>Basic mandatory</td><td>88</td></tr>
+    <tr><td class="subject">General histology, with cytology</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>Basic mandatory</td><td>87</td></tr>
+    <tr><td class="subject">Basics of philosophy</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>University optional</td><td>84</td></tr>
+    <tr><td class="subject">Foreign language - 1 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>University mandatory</td><td>82</td></tr>
+    <tr><td class="subject">Human normal anatomy (locomotor and internal organs anatomy)</td><td>5.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>Basic mandatory</td><td>85</td></tr>
+    <tr><td class="subject">Introduction of biochemistry</td><td>4.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>Basic mandatory</td><td>80</td></tr>
+    <tr><td class="subject">Medical biology</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>Faculty mandatory</td><td>86</td></tr>
+    <tr><td class="subject">Biophysics</td><td>3.0</td><td>2022-2023</td><td>Autumn</td><td>1</td><td>Basic mandatory</td><td>88</td></tr>
 
     <!-- Semester 2 -->
-    <tr><td class="subject">Emergency Medicine</td><td>3.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td><td>89</td></tr>
-    <tr><td class="subject">Human normal Physiology (General)</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td><td>87</td></tr>
-    <tr><td class="subject">Human normal anatomy (cardiovascular & neuroanatomy)</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td><td>85</td></tr>
-    <tr><td class="subject">General biochemistry</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td><td>80</td></tr>
-    <tr><td class="subject">Foreign language - 2 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>University mandatory</td><td>83</td></tr>
-    <tr><td class="subject">Special (organs Systems) histology</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>Basic mandatory</td><td>84</td></tr>
-    <tr><td class="subject">Basics of psychology</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>University optional</td><td>86</td></tr>
+    <tr><td class="subject">Emergency Medicine</td><td>3.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>Basic mandatory</td><td>89</td></tr>
+    <tr><td class="subject">Human normal Physiology (General)</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>Basic mandatory</td><td>87</td></tr>
+    <tr><td class="subject">Human normal anatomy (cardiovascular & neuroanatomy)</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>Basic mandatory</td><td>85</td></tr>
+    <tr><td class="subject">General biochemistry</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>Basic mandatory</td><td>80</td></tr>
+    <tr><td class="subject">Foreign language - 2 (Georgian)</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>University mandatory</td><td>83</td></tr>
+    <tr><td class="subject">Special (organs Systems) histology</td><td>4.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>Basic mandatory</td><td>84</td></tr>
+    <tr><td class="subject">Basics of psychology</td><td>5.0</td><td>2022-2023</td><td>Spring</td><td>2</td><td>University optional</td><td>86</td></tr>
 
     <!-- Semester 3 -->
-    <tr><td class="subject">Special biochemistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>70</td></tr>
-    <tr><td class="subject">Prevention of dental diseases</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>Clinical/Profile mandatory</td><td>78</td></tr>
-    <tr><td class="subject">Introduction of Therapeutic Dentistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Clinical/Profile mandatory</td><td>73</td></tr>
-    <tr><td class="subject">Topographic anatomy and surgery of head/neck</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>75</td></tr>
-    <tr><td class="subject">Human normal Physiology (organ systems)</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>69</td></tr>
-    <tr><td class="subject">Basic Clinical Skills</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>67</td></tr>
-    <tr><td class="subject">Pathology (General/Inflammation/Fever etc)</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>60</td></tr>
-    <tr><td class="subject">General microbiology</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>Basic mandatory</td><td>50</td></tr>
+    <tr><td class="subject">Special biochemistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>70</td></tr>
+    <tr><td class="subject">Prevention of dental diseases</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Clinical/Profile mandatory</td><td>78</td></tr>
+    <tr><td class="subject">Introduction of Therapeutic Dentistry</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Clinical/Profile mandatory</td><td>73</td></tr>
+    <tr><td class="subject">Topographic anatomy and surgery of head/neck</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>75</td></tr>
+    <tr><td class="subject">Human normal Physiology (organ systems)</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>69</td></tr>
+    <tr><td class="subject">Basic Clinical Skills</td><td>3.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>67</td></tr>
+    <tr><td class="subject">Pathology (General/Inflammation/Fever etc)</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>60</td></tr>
+    <tr><td class="subject">General microbiology</td><td>4.0</td><td>2023-2024</td><td>Autumn</td><td>3</td><td>Basic mandatory</td><td>50</td></tr>
 
     <!-- Semester 4 -->
-    <tr><td class="subject">Immunology for dentists</td><td>4.0</td><td>2024-2025</td><td>Winter</td><td>Basic mandatory</td><td>82</td></tr>
-    <tr><td class="subject">Laboratory medicine</td><td>5.0</td><td>2024-2025</td><td>Winter</td><td>Faculty mandatory</td><td>87</td></tr>
-    <tr><td class="subject">Sociology</td><td>3.0</td><td>2024-2025</td><td>Spring</td><td>Faculty optional</td><td>50/60</td></tr>
-    <tr><td class="subject">Introduction of prosthodontic dentistry</td><td>5.0</td><td>2024-2025</td><td>Spring</td><td>Clinical/Profile mandatory</td><td>45/60</td></tr>
-    <tr><td class="subject">Phantom Operative Odontology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>Clinical/Profile mandatory</td><td>53/60</td></tr>
-    <tr><td class="subject">Special microbiology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>Basic mandatory</td><td>47/60</td></tr>
-    <tr><td class="subject">General Pharmacology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>Basic mandatory</td><td>49/60</td></tr>
-    <tr><td class="subject">Pathology (Tumor growth, metabolism)</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>Basic mandatory</td><td>42/60</td></tr>
+    <tr><td class="subject">Immunology for dentists</td><td>4.0</td><td>2024-2025</td><td>Winter</td><td>4</td><td>Basic mandatory</td><td>82</td></tr>
+    <tr><td class="subject">Laboratory medicine</td><td>5.0</td><td>2024-2025</td><td>Winter</td><td>4</td><td>Faculty mandatory</td><td>87</td></tr>
+    <tr><td class="subject">Sociology</td><td>3.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Faculty optional</td><td>50/60</td></tr>
+    <tr><td class="subject">Introduction of prosthodontic dentistry</td><td>5.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>45/60</td></tr>
+    <tr><td class="subject">Phantom Operative Odontology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>53/60</td></tr>
+    <tr><td class="subject">Special microbiology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>47/60</td></tr>
+    <tr><td class="subject">General Pharmacology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>49/60</td></tr>
+    <tr><td class="subject">Pathology (Tumor growth, metabolism)</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>42/60</td></tr>
 
   </table>
 </body>
