--- a/grades.html
+++ b/grades.html
@@ -1,4 +1,3 @@
-Rabe33, [6/29/2025 7:41 AM]
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,12 +81,12 @@ Rabe33, [6/29/2025 7:41 AM]
     <!-- Semester 4 -->
     <tr><td class="subject">Immunology for dentists</td><td>4.0</td><td>2024-2025</td><td>Winter</td><td>4</td><td>Basic mandatory</td><td>82</td></tr>
     <tr><td class="subject">Laboratory medicine</td><td>5.0</td><td>2024-2025</td><td>Winter</td><td>4</td><td>Faculty mandatory</td><td>87</td></tr>
-    <tr><td class="subject">Sociology</td><td>3.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Faculty optional</td><td>50/60</td></tr>
-    <tr><td class="subject">Introduction of prosthodontic dentistry</td><td>5.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>45/60</td></tr>
-    <tr><td class="subject">Phantom Operative Odontology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>53/60</td></tr>
-    <tr><td class="subject">Special microbiology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>47/60</td></tr>
-    <tr><td class="subject">General Pharmacology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>49/60</td></tr>
-    <tr><td class="subject">Pathology (Tumor growth, metabolism)</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>42/60</td></tr>
+    <tr><td class="subject">Sociology</td><td>3.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Faculty optional</td><td>50</td></tr>
+    <tr><td class="subject">Introduction of prosthodontic dentistry</td><td>5.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>45</td></tr>
+    <tr><td class="subject">Phantom Operative Odontology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Clinical/Profile mandatory</td><td>53</td></tr>
+    <tr><td class="subject">Special microbiology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>47</td></tr>
+    <tr><td class="subject">General Pharmacology</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>4</td><td>Basic mandatory</td><td>49</td></tr>
+    <tr><td class="subject">Pathology (Tumor growth, metabolism)</td><td>4.0</td><td>2024-2025</td><td>Spring</td><td>5</td><td>Basic mandatory</td><td>42</td></tr>
 
   </table>
 </body>
