--- a/dashboard.html
+++ b/dashboard.html
@@ -1,155 +1,151 @@
+Rabe33, [6/29/2025 8:21 AM]
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CIU Student Portal</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dashboard - CIU</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f6f6f6;
+      background-color: #f8f9fa;
       margin: 0;
-      padding: 0;
-    }
-
-    .header {
-      background-color: #1c1c1c;
-      color: white;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-
-    .logo img {
-      height: 40px;
-      margin-right: 10px;
-    }
-
-    .user-info {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-    }
-
-    .tag {
-      background-color: gray;
-      color: white;
-      border-radius: 10px;
-      padding: 3px 10px;
-      font-size: 13px;
-    }
-
-    .balance {
-      background-color: #4caf50;
-      color: white;
-      padding: 5px 12px;
-      border-radius: 10px;
-      font-size: 14px;
-    }
-
-    .status-bar {
-      background-color: #fdd;
-      color: #a00;
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-    }
-
-    .content {
       padding: 20px;
     }
-
-    .section-title {
-      background-color: #eee;
-      padding: 10px;
-      margin-top: 20px;
-      font-weight: bold;
-      border-bottom: 2px solid #ccc;
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      position: relative;
     }
-
-    .menu {
+    header img {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      height: 50px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    nav {
+      background-color: #e0eaff;
+      padding: 10px;
       margin-top: 10px;
-      border: 1px solid #ddd;
+      text-align: center;
     }
-
-    .menu a {
-      display: block;
-      padding: 12px;
-      color: #b30000;
-      border-bottom: 1px solid #ddd;
+    nav a {
+      margin: 0 10px;
+      color: #003366;
+      font-weight: bold;
       text-decoration: none;
+    }
+    .section {
+      background-color: white;
+      border: 1px solid #ccc;
+      margin-top: 20px;
+      padding: 20px;
+      border-radius: 5px;
+    }
+    .section h2 {
+      color: #003366;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 5px;
+    }
+    .status {
+      color: green;
       font-weight: bold;
     }
-
-    .menu a:hover {
-      background-color: #f0f0f0;
+    .balance {
+      color: green;
+      font-weight: bold;
     }
-
-    .messages {
-      margin-top: 25px;
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
     }
-
-    .messages div {
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background-color: #e0eaff;
+    }
+    .message {
+      border: 1px solid #ccc;
       padding: 10px;
-      border-bottom: 1px solid #ccc;
-      font-size: 14px;
-    }
-
-    .messages .red {
-      color: #b30000;
-    }
-
-    .messages .green {
-      color: #2e7d32;
+      margin-bottom: 8px;
+      border-radius: 5px;
+      background-color: #f2f2f2;
     }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <div class="logo">
-      <img src="https://upload.wikimedia.org/wikipedia/en/0/09/Caucasus_International_University_logo.png" alt="CIU Logo">
-      <strong>Learning Management System</strong>
-    </div>
-    <div class="user-info">
-      <span class="tag">GPA 2.90</span>
-      <span class="tag">OM2203STen_I</span>
-      <span class="balance">0.00 USD</span>
-      <span class="tag">Muhammad Younes</span>
-    </div>
-  </div>
+<header>
+  <img src="ciu-logo.png" alt="CIU Logo" />
+  <h1>Caucasus International University</h1>
+</header>
 
-  <div class="status-bar">
-    You are an active student. Welcome to your CIU portal.
-  </div>
+<nav>
+  <a href="grades.html">Grades</a>
+  <a href="profile.html">Student Profile</a>
+  <a href="courses.html">Selected Courses</a>
+  <a href="schedule.html">Schedule</a>
+</nav>
 
-  <div class="content">
+<div class="section">
+  <h2>Student Info</h2>
+  <p><strong>Name:</strong> Muhammad Younes</p>
+  <p><strong>Status:</strong> <span class="status">Active Student</span></p>
+  <p><strong>GPA:</strong> 2.9</p>
+  <p><strong>Balance:</strong> <span class="balance">0.00 USD</span></p>
+</div>
 
-    <div class="section-title">Spring semester 2024–2025</div>
-    <div style="margin-top: 10px; font-size: 14px;">
-      English-language educational program in dentistry at the Faculty of Medicine
-    </div>
+<div class="section">
+  <h2>Selected Courses (Semester 4)</h2>
+  <table>
+    <tr><th>Course</th><th>Credits</th><th>Year</th><th>Type</th><th>Semester</th></tr>
+    <tr><td>Immunology for dentists</td><td>4.0</td><td>2024-2025</td><td>Basic mandatory</td><td>Winter</td></tr>
+    <tr><td>Laboratory medicine</td><td>5.0</td><td>2024-2025</td><td>Faculty mandatory</td><td>Winter</td></tr>
+    <tr><td>Sociology</td><td>3.0</td><td>2024-2025</td><td>Faculty optional</td><td>Spring</td></tr>
+    <tr><td>Introduction of prosthodontic dentistry</td><td>5.0</td><td>2024-2025</td><td>Clinical/Profile mandatory</td><td>Spring</td></tr>
+    <tr><td>Phantom Operative Odontology</td><td>4.0</td><td>2024-2025</td><td>Clinical/Profile mandatory</td><td>Spring</td></tr>
+    <tr><td>Special microbiology</td><td>4.0</td><td>2024-2025</td><td>Basic mandatory</td><td>Spring</td></tr>
+    <tr><td>General Pharmacology</td><td>4.0</td><td>2024-2025</td><td>Basic mandatory</td><td>Spring</td></tr>
+    <tr><td>Pathology (Tumor growth...)</td><td>4.0</td><td>2024-2025</td><td>Basic mandatory</td><td>Spring</td></tr>
+  </table>
+</div>
 
-    <div class="section-title">GRADES | STUDENT PROFILE | TRANSCRIPT</div>
-    <div class="menu">
-      <a href="grades.html">Grades</a>
-      <a href="profile.html">Student Profile</a>
-      <a href="transcript.html">Transcript</a>
-    </div>
+<div class="section">
+  <h2>Schedule</h2>
+  <table>
+    <tr><th>Day</th><th>Time</th><th>Course</th><th>Group</th></tr>
+    <tr><td>Monday</td><td>09:00 - 13:00</td><td>Immunology for dentists</td><td>2</td></tr>
+    <tr><td>Tuesday</td><td>09:00 - 13:00</td><td>Laboratory medicine</td><td>2</td></tr>
+    <tr><td>Wednesday</td><td>09:00 - 13:00</td><td>Introduction of prosthodontic dentistry</td><td>2</td></tr>
+    <tr><td>Thursday</td><td>09:00 - 13:00</td><td>Phantom Operative Odontology</td><td>2</td></tr>
+    <tr><td>Friday</td><td>09:00 - 13:00</td><td>Special microbiology</td><td>2</td></tr>
+  </table>
+</div>
 
-    <div class="section-title">MESSAGES</div>
-    <div class="messages">
-      <div class="red">Upcoming graduation review will be held on July 10th at the Faculty Board.</div>
-      <div class="red">All students must update their personal information before August 1st.</div>
-      <div class="green">Summer semester registration opens on July 5th, 2025.</div>
-    </div>
+<div class="section">
+  <h2>University Messages</h2>
 
-  </div>
+<div class="message">📢 Lecture on "Pharmacology updates" this Friday.</div>
+  <div class="message">📝 Midterm exam schedule will be announced next week.</div>
+  <div class="message">📚 Library will be open on weekends during finals.</div>
+  <div class="message">💡 New research opportunity available in the Faculty of Dentistry.</div>
+  <div class="message">📅 Graduation ceremony scheduled for July 20.</div>
+  <div class="message">🔧 Portal maintenance scheduled on Sunday at 3 PM.</div>
+  <div class="message">📎 Document submission deadline is July 5.</div>
+  <div class="message">📢 Seminar on Oral Surgery next Monday at 2 PM.</div>
+  <div class="message">✅ Attendance is mandatory for lab sessions.</div>
+  <div class="message">🎓 Career guidance session available online now.</div>
+</div>
 
 </body>
 </html>
