--- a/profile.html
+++ b/profile.html
@@ -1,20 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Student Profile</title>
-  <link rel="stylesheet" href="style.css">
-  <script>
-    if (!localStorage.getItem("authenticated")) window.location.href = "index.html";
-  </script>
+  <meta charset="UTF-8" />
+  <title>Student Profile - CIU Portal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f8fc;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header img {
+      height: 40px;
+    }
+    nav a {
+      color: white;
+      margin-left: 25px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .container {
+      padding: 30px;
+    }
+    h2 {
+      color: #003366;
+      margin-bottom: 20px;
+    }
+    table {
+      width: 60%;
+      margin: auto;
+      border-collapse: collapse;
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px;
+      border: 1px solid #ccc;
+      text-align: left;
+    }
+    th {
+      background-color: #e0eaff;
+      color: #003366;
+      width: 30%;
+    }
+  </style>
 </head>
 <body>
-  <h2>Student Profile</h2>
-  <table>
-    <tr><td>Name:</td><td>Muhammad Younes</td></tr>
-    <tr><td>Student ID:</td><td>LR2545978</td></tr>
-    <tr><td>Faculty:</td><td>Faculty of Dentistry</td></tr>
-    <tr><td>Status:</td><td>Active Student</td></tr>
-    <tr><td>Start Year:</td><td>2022</td></tr>
-  </table>
+
+  <header>
+    <img src="ciu-logo.png" alt="CIU Logo">
+    <nav>
+      <a href="dashboard.html">Dashboard</a>
+      <a href="grades.html">Grades</a>
+      <a href="logout.html">Logout</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <h2>Student Profile</h2>
+    <table>
+      <tr><th>Student Name</th><td>Muhammad Younes</td></tr>
+      <tr><th>Student ID</th><td>LR2545978</td></tr>
+      <tr><th>Faculty</th><td>Faculty of Dentistry</td></tr>
+      <tr><th>Status</th><td style="color: green; font-weight: bold;">Active Student</td></tr>
+      <tr><th>Year of Study</th><td>2nd Year</td></tr>
+      <tr><th>Current Semester</th><td>Semester 4</td></tr>
+      <tr><th>GPA</th><td>2.97</td></tr>
+      <tr><th>Email</th><td>mohammad.youness@ciu.edu.ge</td></tr>
+    </table>
+  </div>
+
 </body>
 </html>
