--- a/schedule.html
+++ b/schedule.html
@@ -1,20 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Schedule</title>
-  <link rel="stylesheet" href="style.css">
-  <script>
-    if (!localStorage.getItem("authenticated")) window.location.href = "index.html";
-  </script>
+  <meta charset="UTF-8" />
+  <title>Schedule - CIU Student Portal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f8fc;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header img {
+      height: 40px;
+    }
+    nav a {
+      color: white;
+      margin-left: 25px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .container {
+      padding: 30px;
+    }
+    h2 {
+      color: #003366;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    table {
+      width: 80%;
+      margin: auto;
+      border-collapse: collapse;
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px;
+      border: 1px solid #ccc;
+      text-align: center;
+    }
+    th {
+      background-color: #e0eaff;
+      color: #003366;
+    }
+    td.subject {
+      color: #d9534f; /* أحمر فاتح */
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h2>Weekly Schedule</h2>
-  <ul>
-    <li>Monday: Oral Surgery - 10:00 AM</li>
-    <li>Tuesday: Endodontics - 12:00 PM</li>
-    <li>Wednesday: Operative Dentistry - 9:00 AM</li>
-    <li>Thursday: Pharmacology - 11:00 AM</li>
-    <li>Friday: Biochemistry - 2:00 PM</li>
-  </ul>
+
+  <header>
+    <img src="ciu-logo.png" alt="CIU Logo">
+    <nav>
+      <a href="dashboard.html">Dashboard</a>
+      <a href="grades.html">Grades</a>
+      <a href="profile.html">Profile</a>
+      <a href="logout.html">Logout</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <h2>Semester 4 - Weekly Schedule</h2>
+    <table>
+      <tr>
+        <th>Day</th>
+        <th>Time</th>
+        <th>Course</th>
+        <th>Group</th>
+      </tr>
+      <tr><td>Monday</td><td>09:00 - 11:00 / 12:00 - 03:00</td><td class="subject">Special microbiology / Sociology</td><td>Group 2</td></tr>
+      <tr><td>Tuesday</td><td>11:00 - 01:00 / 02:00 - 05:00</td><td class="subject">Phantom Operative Odontology / General Pharmacology</td><td>Group 2</td></tr>
+      <tr><td>Wednesday</td><td>12:00 - 04:00</td><td class="subject">Pathology</td><td>Group 2</td></tr>
+      <tr><td>Thursday</td><td>01:00 - 05:00</td><td class="subject">Introduction of prosthodontic dentistry</td><td>Group 2</td></tr>
+      <tr><td>Friday</td><td>09:30 - 12:00</td><td class="subject">General Pharmacology</td><td>Group 2</td></tr>
+    </table>
+  </div>
+
 </body>
 </html>
